only show allocations with trips

--- a/app/views/layouts/network.html.erb
+++ b/app/views/layouts/network.html.erb
@@ -5,6 +5,7 @@
           <li><%= link_to "View Network Summary", :action=>:index %></li>
           <li><%= link_to "Quarterly Narrative Report", :action=>:show_create_quarterly  %></li>
           <li><%= link_to "Ride Purpose Report", :action=>:show_ride_purpose_report  %></li>
+          <li><%= link_to "A&E Report", :action=>:show_create_age_and_ethnicity  %></li>
         </ul>
 <% end %>
 
