--- a/app/views/layouts/network.html.erb
+++ b/app/views/layouts/network.html.erb
@@ -1,8 +1,7 @@
 <% content_for :menu_bar do %>
         <ul id="sitenav" class="selfclear">
           <li><%= link_to "Create Report", :action=>:show_create_report %></li>
-          <li><%= link_to "Predefined Reports", :action=>:report_index %></li>
-          <li><%= link_to "View Network Summary", :action=>:index %></li>
+          <li><%= link_to "Predefined Reports", :action=>:index %></li>
           <li><%= link_to "Quarterly Narrative Report", :action=>:show_create_quarterly  %></li>
           <li><%= link_to "Ride Purpose Report", :action=>:show_ride_purpose_report  %></li>
           <li><%= link_to "A&E Report", :action=>:show_create_age_and_ethnicity  %></li>
