--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Dashboard</h1>
 <ul id="dashboard">
-<li><a href="/report/">Reports</a></li>
+<li><a href="/reports/">Reports</a></li>
 <li><a href="/summaries/">Summaries</a></li>
 <li><a href="/trips/">Trips</a></li>
 <li><a href="/runs/">Runs</a></li>
