--- a/app/views/reports/_totals.html.erb
+++ b/app/views/reports/_totals.html.erb
@@ -3,7 +3,7 @@
       <% row = controller.sum(row) %>
       <!-- you will never be tr_open here -->
       <tr class="totals">
-        <td colspan="<%=group_fields.size + 1%>">Totals</td>
+        <td colspan="<%=group_fields.size%>">Totals</td>
 <% if @fields.member? 'funds' %><td><%= '%.2f' % row.funds %></td><%end%>
 <% if @fields.member? 'agency_other' %><td><%= '%.2f' % row.agency_other %></td><%end%>
 <% if @fields.member? 'vehicle_maint' %><td><%= '%.2f' % row.vehicle_maint %></td><%end%>
