Summary form: Administrative, Operations, and Vehicle Maintenance are costs, not hours. Change label accordingly and remove spinners.

--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -38,9 +38,9 @@
 <li><%= f.label :driver_hours_volunteer %> <%= f.text_field :driver_hours_volunteer %></li>
 <li><%= f.label :escort_hours_volunteer %> <%= f.text_field :escort_hours_volunteer %></li>
 <li><%= f.label :administrative_hours_volunteer %> <%= f.text_field :administrative_hours_volunteer %></li>
-<li><%= f.label :administrative, "Administrative Hours" %> <%= f.text_field :administrative %></li>
-<li><%= f.label :operations, "Operations Hours" %> <%= f.text_field :operations %></li>
-<li><%= f.label :vehicle_maint, "Vehicle Maintenance Hours" %> <%= f.text_field :vehicle_maint %></li>
+<li><%= f.label :administrative, "Administrative" %> <%= f.text_field :administrative %></li>
+<li><%= f.label :operations, "Operations" %> <%= f.text_field :operations %></li>
+<li><%= f.label :vehicle_maint, "Vehicle Maintenance" %> <%= f.text_field :vehicle_maint %></li>
 
 <li><%= f.label :complete %><%= f.check_box :complete %></li>
 
