--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -260,10 +260,7 @@ font-size: 0.9em;
 #summary_complaints, 
 #summary_summary_rows_attributes_0_in_district_trips, #summary_summary_rows_attributes_0_out_of_district_trips, #summary_summary_rows_attributes_1_in_district_trips, #summary_summary_rows_attributes_1_out_of_district_trips, #summary_summary_rows_attributes_2_in_district_trips, #summary_summary_rows_attributes_2_out_of_district_trips, #summary_summary_rows_attributes_3_in_district_trips, #summary_summary_rows_attributes_3_out_of_district_trips, #summary_summary_rows_attributes_4_in_district_trips, #summary_summary_rows_attributes_4_out_of_district_trips, #summary_summary_rows_attributes_5_in_district_trips, #summary_summary_rows_attributes_5_out_of_district_trips, #summary_summary_rows_attributes_6_in_district_trips, #summary_summary_rows_attributes_6_out_of_district_trips, #summary_summary_rows_attributes_7_in_district_trips, #summary_summary_rows_attributes_7_out_of_district_trips, #run_odometer_start, 
 #run_odometer_end, 
-#run_escort_count,
-#summary_administrative,
-#summary_operations,
-#summary_vehicle_maint {
+#run_escort_count {
 width: 6em;
 }
 
