Summary form: Funds, Agency Other, & Donations need to be added to service summary forms. These are costs also, so no spinners.

--- a/app/views/summaries/_form.html.erb
+++ b/app/views/summaries/_form.html.erb
@@ -41,6 +41,9 @@
 <li><%= f.label :administrative, "Administrative" %> <%= f.text_field :administrative %></li>
 <li><%= f.label :operations, "Operations" %> <%= f.text_field :operations %></li>
 <li><%= f.label :vehicle_maint, "Vehicle Maintenance" %> <%= f.text_field :vehicle_maint %></li>
+<li><%= f.label :administrative, "Funds" %> <%= f.text_field :funds %></li>
+<li><%= f.label :operations, "Donations" %> <%= f.text_field :donations %></li>
+<li><%= f.label :vehicle_maint, "Agency Other" %> <%= f.text_field :agency_other %></li>
 
 <li><%= f.label :complete %><%= f.check_box :complete %></li>
 
