--- a/app/views/users/show_change_password.html.erb
+++ b/app/views/users/show_change_password.html.erb
@@ -1,7 +1,13 @@
+ <script src="/javascripts/digitalspaghetti.password.js" type="text/javascript"></script> 
+
 <%= form_for @user, :url=>{:action=>:change_password} do |f| %>
 
 <%= f.label :password %>
 <%= f.password_field :password %><br/>
+
+<script type="text/javascript">
+	jQuery('#user_password').pstrength();
+</script>
 
 <%= f.label :password_confirmation %>
 <%= f.password_field :password_confirmation %><br/>
