--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <!--[if lt IE 8]><%= stylesheet_link_tag 'ie' %><![endif]-->
   <%= stylesheet_link_tag 'print-reset', :media=>"print" %>
   
-  <%= stylesheet_link_tag 'ui.combobox.css' %>
+  <%= stylesheet_link_tag 'monthpicker.css' %>
   <%= stylesheet_link_tag 'ui-custom/jquery-ui-1.8.6.custom.css' %>
   <%= stylesheet_link_tag 'ui.selectmenu.css' %>
   <%= stylesheet_link_tag 'jquery.multiselect.css' %>
@@ -18,8 +18,9 @@
   <%= javascript_include_tag 'jquery-ui-1.8.6.custom.min' %>
   <%= javascript_include_tag 'jquery-ui-selectmenu' %>
   <%= javascript_include_tag 'jquery.multiselect.min' %>
-  <%= javascript_include_tag 'rails' %>
   <%= javascript_include_tag 'ui.spinner.min' %>
+  <%= javascript_include_tag 'monthpicker.min' %>
+  <%= javascript_include_tag 'rails' %>
   <%= javascript_include_tag 'application' %>
 
   <!--%= javascript_include_tag :defaults %-->
