--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -451,8 +451,8 @@ font-weight: bold;
 border-bottom: 1px solid #ccc;
 }
 
-#summary-results .status-complete,
-#summary-results .status-incomplete {
+.status-complete,
+.status-incomplete {
 display: block;
 height: 20px;
 width: 20px;
@@ -461,11 +461,11 @@ text-indent: -9999em;
 margin: 0 auto;
 }
 
-#summary-results .status-complete {
+.status-complete {
 background: url(../images/spirit20/system-tick-alt-02.png) no-repeat;
 }
 
-#summary-results .status-incomplete {
+.status-incomplete {
 background: url(../images/system-tick-incomplete.png) no-repeat;
 }
 
