--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -324,7 +324,8 @@ margin: 0.5em 0;
 #grouped-results,
 #run-results,
 #purpose-results,
-#summary-results {
+#summary-results, 
+.results {
 margin: 0;
 width: 100%;
 border-collapse: collapse;
@@ -334,7 +335,8 @@ border-collapse: collapse;
 #grouped-results thead th,
 #run-results thead th,
 #purpose-results thead th,
-#summary-results thead th {
+#summary-results thead th, 
+.results th {
 font-weight: bold;
 padding: 0.3em;
 border-bottom: 1px solid #222;
@@ -344,7 +346,8 @@ border-bottom: 1px solid #222;
 #grouped-results tbody tr:nth-child(odd),
 #run-results tbody tr:nth-child(odd),
 #purpose-results tbody tr:nth-child(odd),
-#summary-results tbody tr:nth-child(odd)  {
+#summary-results tbody tr:nth-child(odd),
+.results tbody tr:nth-child(odd) {
 background: #f1f2f3;
 }
 
@@ -353,7 +356,9 @@ background: #f1f2f3;
 #run-results tbody td,
 #purpose-results tbody td,
 #purpose-results tbody th,
-#summary-results tbody td {
+#summary-results tbody td
+.results tbody th,
+.results tbody td {
 padding: 0.2em 0.3em;
 }
 
