convert to devise for compatibility with ridepilot and ease of maintenance (also correct a minor bug which would have prevented the creation of new users)

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,5 +4,5 @@
 <li><a href="/summaries/">Summaries</a></li>
 <li><a href="/trips/">Trips</a></li>
 <li><a href="/runs/">Runs</a></li>
-<li><a href="/users/">Users</a></li>
+<li><a href="/users/index">Users</a></li>
 </ul>
