--- a/app/views/new_user_mailer/new_user_email.html.erb
+++ b/app/views/new_user_mailer/new_user_email.html.erb
@@ -1,4 +1,4 @@
-Hi, <%= @user.name %><br/>
+Hi, <%= @user.email %><br/>
 <br/>
 You have been added as a user to LowDown.  You can visit the site at<br/>
 <%= @url %><br/>
