--- a/app/views/users/show_create.html.erb
+++ b/app/views/users/show_create.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :user, :url=>{:action=>:create} do |f| %>
+<%= form_for :user, :url=>{:action=>:create_user} do |f| %>
 
 <%= render :partial=>"form", :locals=>{:f => f}%>
 
