--- a/app/views/layouts/customers.html.erb
+++ b/app/views/layouts/customers.html.erb
@@ -1,5 +1,5 @@
 <% content_for :menu_bar do %>
-        <ul id="sitenav" class="selfclear">
+        <ul id="subnav" class="selfclear">
           <li><%= link_to "Create Report", :action=>:show_create_report %></li>
         </ul>
 <% end %>
