--- a/app/views/reports/show_create_quarterly.html.erb
+++ b/app/views/reports/show_create_quarterly.html.erb
@@ -1,9 +1,15 @@
-        <h1>Create Quarterly Narrative Report</h1>
+<div id="page-header">
+  <h1>Create Quarterly Narrative Report</h1>
+</div>
+
         <%= form_for @report, :html=>{:id=>"create-report", :method=>:get}, :url=>{:action=>"quarterly_narrative_report"} do |f| %>
           <div class="ui-widget">
            	service for the quarter beginning
 	           <span id="startday-wrap"><%= f.date_select :start_date, :discard_day=>true %></span>
           </div>
 
-          <input id="report-create" type="submit" value="Create Report" />
+          <div class="actions">
+            <input id="report-create" type="submit" value="Create Report" />
+          </div>
+
         <% end %><!-- end form -->
