--- a/app/views/reports/show_ride_purpose_report.html.erb
+++ b/app/views/reports/show_ride_purpose_report.html.erb
@@ -1,7 +1,15 @@
+<div id="page-header">
+  <h1>Ride Purpose Report</h1>
+</div>
+
 <form action="/reports/ride_purpose_report" method="GET">
+  <fieldset>
 
+  <p><strong>Start date:</strong> <input type="text" name="start_date" /></p>
 
-Start date: <input type="text" name="start_date" /><br/>
+  <div class="actions">
+    <input type="submit" name="report" value="Report" />
+  </div>
 
-<input type="submit" name="report" value="Report" />
+  </fieldset>
 </form>
