--- a/app/views/users/show_init.html.erb
+++ b/app/views/users/show_init.html.erb
@@ -1,4 +1,6 @@
-<div>Create initial user. </div>
+<div id="page-header">
+  <h1>Create Initial User</h1>
+</div>
 
 <%= form_for @user, :url=>:init do |f| %>
 
