--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,8 +1,11 @@
-<h1>Dashboard</h1>
+<div id="page-header">
+  <h1>Dashboard</h1>
+</div>
+
 <ul id="dashboard">
-<li><a href="/reports/">Reports</a></li>
-<li><a href="/summaries/">Summaries</a></li>
-<li><a href="/trips/">Trips</a></li>
-<li><a href="/runs/">Runs</a></li>
-<li><a href="/users/index">Users</a></li>
+  <li><a href="/reports/">Reports</a></li>
+  <li><a href="/summaries/">Summaries</a></li>
+  <li><a href="/trips/">Trips</a></li>
+  <li><a href="/runs/">Runs</a></li>
+  <li><a href="/users/index">Users</a></li>
 </ul>
