--- a/app/views/layouts/reports.html.erb
+++ b/app/views/layouts/reports.html.erb
@@ -1,5 +1,5 @@
 <% content_for :menu_bar do %>
-        <ul id="sitenav" class="selfclear">
+        <ul id="subnav" class="selfclear">
           <li><%= link_to "Create Report", :action=>:show_create_report %></li>
           <li><%= link_to "Predefined Reports", :action=>:index %></li>
           <li><%= link_to "Quarterly Narrative Report", :action=>:show_create_quarterly  %></li>
