--- a/app/views/layouts/summaries.html.erb
+++ b/app/views/layouts/summaries.html.erb
@@ -1,5 +1,5 @@
 <% content_for :menu_bar do %>
-        <ul id="sitenav" class="selfclear">
+        <ul id="subnav" class="selfclear">
           <li><%= link_to "View summaries", :action=>:index %></li>
 <% if current_user.is_admin %>
           <li><%= link_to "Create Summary", :action=>:show_create %></li>
