--- a/app/views/reports/show_create_age_and_ethnicity.html.erb
+++ b/app/views/reports/show_create_age_and_ethnicity.html.erb
@@ -1,11 +1,21 @@
-        <h1>Create Age And Ethnicity Report</h1>
-        <%= form_for @report, :as => :q, :html=>{:id=>"create-report", :method=>:get}, :url=>{:action=>"age_and_ethnicity"} do |f| %>
-          <div class="ui-widget">
-           	service for the month
-	           <span id="startday-wrap"><%= f.date_select :start_date, :discard_day=>true %></span>
-          </div>
+<div id="page-header">
+  <h1>Create Age And Ethnicity Report</h1>
+</div>
 
-	        <%= f.collection_select :agency_branch, @agencies, :to_s, :to_s %>
+<%= form_for @report, :as => :q, :html=>{:id=>"create-report", :method=>:get}, :url=>{:action=>"age_and_ethnicity"} do |f| %>
 
-          <input id="report-create" type="submit" value="Create Report" />
-        <% end %><!-- end form -->
+<fieldset>
+
+  <p>
+    <span><strong>Service for the Month:</strong></span> 
+    <%= f.date_select :start_date, :discard_day=>true %>
+    <%= f.collection_select :agency_branch, @agencies, :to_s, :to_s %>
+  </p>
+
+  <div class="actions">
+    <input id="report-create" type="submit" value="Create Report" />
+  </div>
+
+</fieldset>
+
+<% end %><!-- end form -->
