--- a/app/views/summaries/show_bulk_update.html.erb
+++ b/app/views/summaries/show_bulk_update.html.erb
@@ -1,3 +1,7 @@
+<div id="page-header">
+  <h1>Mark Complete</h1>
+</div>
+
 <%= form_tag :action=>:bulk_update, :method=>"POST" do  %>
 
 Mark all summaries complete for periods between
