--- a/app/views/trips/list.html.erb
+++ b/app/views/trips/list.html.erb
@@ -1,5 +1,7 @@
+<div id="page-header">
+  <h1>View Trips</h1>
+</div>
 
-         <h1>View Trips</h1>
          <%= form_for @query, :html=>{:id=>"trip-filter", :method=>:get}, :url=>{:action=>:list} do |f| %>
            <div class="ui-widget">
              Trips between
