--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,7 @@
+<div id="page-header">
+  <h1>Users</h1>
+</div>
+
 <table>
 <tr>
 <th>Email</th>
@@ -15,8 +19,8 @@
 <% end %>
 </table>
 
-<br/>
-
 <% if current_user.is_admin %>
-<%= link_to "New user", :action=>"show_create" %>
+<hr/>
+
+<%= link_to "New user", { :action=>"show_create" }, :class=>'action-bttn' %>
 <% end %>
