--- a/app/views/users/show_change_password.html.erb
+++ b/app/views/users/show_change_password.html.erb
@@ -1,4 +1,8 @@
- <script src="/javascripts/digitalspaghetti.password.js" type="text/javascript"></script> 
+<div id="page-header">
+  <h1>Change Password</h1>
+</div>
+
+<script src="/javascripts/digitalspaghetti.password.js" type="text/javascript"></script> 
 
 <%= form_for @user, :url=>{:action=>:change_password} do |f| %>
 
